--- a/mailu/mailu.env
+++ b/mailu/mailu.env
@@ -9,7 +9,7 @@
 ###################################
 
 # Set to a randomly generated 16 bytes string
-SECRET_KEY=FUDULBE4B2HL6KOW
+SECRET_KEY=
 
 # Subnet of the docker network. This should not conflict with any networks to which your system is connected. (Internal and external!)
 SUBNET=172.20.0.0/16
