--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 udoo/portainer/i-docker-compose.yml
 VPS/portainer_agent/i-docker-compose.yml
 portainer/i-docker-compose.yml
+portainer_agent/i-docker-compose.yml
