--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ udoo/portainer/i-docker-compose.yml
 VPS/portainer_agent/i-docker-compose.yml
 portainer/i-docker-compose.yml
 portainer_agent/i-docker-compose.yml
+zabbix/i-docker-compose.yml
