--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ VPS/portainer_agent/i-docker-compose.yml
 portainer/i-docker-compose.yml
 portainer_agent/i-docker-compose.yml
 zabbix/i-docker-compose.yml
+totti.to.mm
