--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ portainer/i-docker-compose.yml
 portainer_agent/i-docker-compose.yml
 zabbix/i-docker-compose.yml
 totti.to.mm
+portainer_agent/i-docker-compose.yml
