--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ portainer_agent/i-docker-compose.yml
 zabbix/i-docker-compose.yml
 totti.to.mm
 portainer_agent/i-docker-compose.yml
+portainer_agent/i-docker-compose.yml
