--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     portainer:
         ports:
 #            - '8000:8000'
-            - XXXX:9000         # local-port:container-port of the portainer-manager
+            - 1234:1234         # local-port:container-port of the portainer-manager
         container_name: portainer
         restart: always
         volumes:
