--- a/duplicati/docker-compose.yml
+++ b/duplicati/docker-compose.yml
@@ -1,14 +1,5 @@
 version: '2'
 
-# volumes:
-# #   CONFIG
-    # duplicati-data:
-# #   TARGET
-    # bkp:
-# #   SOURCES
-    # portainer_portainer_data:
-# #    etc:
-    
 services:
     duplicati:
         image: duplicati/duplicati
@@ -16,8 +7,10 @@ services:
             - '8200:8200'
         volumes:
             #   CONFIG
-            - '/ssd/duplicati/data:/data'
+            - /ssd/duplicati/data:/data
             #   TARGET
-            - '/ssd/duplicati/bkp:/home/bkp'
+            - /ssd/duplicati/bkp:/home/bkp
             #   SOURCES
-            - '/home/icke/.config/appdata/portainer:/home/source/portainer'
+            # - /home/icke/.config/appdata/portainer:/home/source/portainer
+            - /var/lib/docker/volumes:/home/source/docker-volumes
+            # - /ssd/nextcloud/data:/home/source/nextcloud/data
